--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -188,7 +188,7 @@ img
 
 .page,
 section
-    background: #5a5757 !important//#988585 !important
+    background: #504242 !important //#5a5757 !important//#988585 !important
     //background: #ff9142 !important
     //background-image: url('../images/bricks55.jpg') !important
     @media screen and (max-width: 768px)
@@ -593,8 +593,18 @@ tr td:first-child
     transition: all 0.1s ease-in-out 
     border-radius: 0
 
-    h4, p, i, &::after
+    img
+        max-width: 64px
+        float: left
+        padding: 10px 10px 10px 0
+
+    h4, i, &::after
        color: white 
+
+
+
+    p
+        color: #d2d2d2
 
     &:after
         transition: all 0.1s ease-in-out
