--- a/public/css/app.css
+++ b/public/css/app.css
@@ -249,7 +249,7 @@ body.admin {
   position: relative;
   margin: 0 0 50px;
   padding: 40px;
-  background: #f3f3f3;
+  background: #d8d8d8;
   box-shadow: 0 0px 3px 1px #000;
 }
 .chimney img,
@@ -260,6 +260,17 @@ body.admin {
 .photo-description img,
 .admin .article img {
   box-shadow: 0 0 5px 1px #868686;
+}
+@media screen and (max-width: 768px) {
+  .chimney,
+  .briquette,
+  .article,
+  .boiler,
+  .order,
+  .photo-description,
+  .admin .article {
+    padding: 20px;
+  }
 }
 .photo-description {
   min-height: 250px;
@@ -274,7 +285,7 @@ body.admin {
 .photo-expanded,
 .article-expanded,
 .resource-expanded {
-  background: #f3f3f3;
+  background: #d8d8d8;
   box-shadow: 0 0px 3px 1px #000;
   padding: 0 40px 40px;
   margin: 0 0;
@@ -285,7 +296,7 @@ body.admin {
   box-shadow: 0 0 5px 1px #868686;
 }
 .main-block {
-  background: #f3f3f3;
+  background: #d8d8d8;
   margin: 20px 0 50px 0;
   padding: 50px;
   box-shadow: 0 0px 5px 1px #5d5d5d;
@@ -3140,6 +3151,11 @@ textarea:hover {
   box-shadow: 0 1px 1px 0px #212121;
   font-size: 16px;
 }
+@media screen and (max-width: 480px) {
+  .Button {
+    width: 100%;
+  }
+}
 .Button__group--positioned {
   position: absolute;
   right: 20px;
@@ -3294,15 +3310,23 @@ tr td:first-child {
 .glyphicon-chevron-right {
   font-size: 12px;
 }
+.nav-tabs li {
+  float: none;
+}
 .single-feature {
   background: #6b5858;
   transition: all 0.1s ease-in-out;
   border-radius: 0;
+  box-shadow: 1px 1px 3px 0px #000;
+  display: -ms-flexbox;
+  display: flex;
 }
 .single-feature img {
-  max-width: 64px;
-  float: left;
-  padding: 10px 10px 10px 0;
+  width: 64px;
+  margin: 10px 10px 10px 0;
+}
+.single-feature .feature-content {
+  margin-left: 10px;
 }
 .single-feature h4,
 .single-feature i,
