--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -9,6 +9,9 @@
     box-shadow: 0 1px 1px 0px #212121
     font-size: 16px
 
+    @media screen and (max-width: 480px)
+        width: 100%
+
     &__group--positioned
         position: absolute
         right: 20px
