--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -188,7 +188,7 @@ img
 
 .page,
 section
-    background: #504242 !important //#5a5757 !important//#988585 !important
+    background: #483434 !important //#5a5757 !important//#988585 !important
     //background: #ff9142 !important
     //background-image: url('../images/bricks55.jpg') !important
     @media screen and (max-width: 768px)
@@ -396,12 +396,12 @@ section
     justify-content: center
     align-items: center
     padding: 180px 0 70px 
-    min-height: calc(100vh - 177px) !important
+    min-height: calc(100vh - 176px) !important
 
 .section-main
     background: #2C2C2C !important
     background-image: none !important
-    min-height: calc(100vh - 77px) !important
+    min-height: calc(100vh - 76px) !important
     padding: 0 0 50px 0
 
 .Main
@@ -595,7 +595,7 @@ tr td:first-child
     float: none
 
 .single-feature
-    background: #6b5858
+    background: #483434
     transition: all 0.1s ease-in-out 
     border-radius: 0
     box-shadow: 1px 1px 3px 0px black
@@ -618,7 +618,7 @@ tr td:first-child
 
     &:after
         transition: all 0.1s ease-in-out
-        background: #6b5858
+        background: #483434
         color: #6b5858
 
 .single-feature:hover
