--- a/resources/assets/stylus/components/Footer.styl
+++ b/resources/assets/stylus/components/Footer.styl
@@ -14,3 +14,6 @@
         margin-right: 30px
         font-size: 16px
         margin: 25px 15px
+
+        &:hover
+            color: #b5b5b5 !important
