--- a/public/css/app.css
+++ b/public/css/app.css
@@ -336,6 +336,13 @@ body.admin {
     padding: 0 20px 40px;
   }
 }
+.mfp-content {
+  width: 90%;
+}
+.price-img {
+  box-shadow: 0 0 5px 1px #868686;
+  margin: 30px 0;
+}
 .main-block {
   background: #d8d8d8;
   margin: 20px 0 50px 0;
