--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -298,6 +298,13 @@ body.admin
     @media screen and (max-width: 768px)
         padding: 0 20px 40px
 
+.mfp-content
+    width: 90%
+
+.price-img
+    box-shadow: 0 0 5px 1px #868686
+    margin: 30px 0
+
 .main-block
     background: #d8d8d8//#f3f3f3
     //box-shadow: 0 2px 1px #b7b7b7
