--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -11,6 +11,9 @@ h3
 .top-line .container
     padding: 0
 
+.question-form
+    margin-bottom: 50px
+
 .add-resource-div
     text-align: center
     float: none
@@ -54,8 +57,8 @@ h3
 .query-string
     color: yellow
 
-#question
-    padding: 10px 15px
+// #question
+//     padding: 10px 15px
 
 .alert-danger,
 .alert-success
@@ -254,6 +257,7 @@ body.admin
 .briquette,
 .article,
 .boiler,
+.question,
 .order,
 .photo-description,
 .admin .article
@@ -273,6 +277,13 @@ body.admin
 
     @media screen and (max-width: 768px)
         padding: 20px
+
+.question
+    min-height: auto
+    font-size: 18px
+    
+    h3
+        margin: 0
 
 .photo-description
     min-height: 250px
