--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,11 @@ h3 {
 .question-form {
   margin-bottom: 50px;
 }
+@media screen and (max-width: 480px) {
+  .delete-form {
+    width: 100%;
+  }
+}
 .add-resource-div {
   text-align: center;
   float: none;
@@ -253,7 +258,7 @@ label {
   min-height: calc(100vh - 76px);
 }
 body.admin {
-  background: #2c2c2c;
+  background: #483434;
 }
 .admin .page {
   padding: 50px 0;
