--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -14,6 +14,10 @@ h3
 .question-form
     margin-bottom: 50px
 
+@media screen and (max-width: 480px)
+    .delete-form
+        width: 100%
+
 .add-resource-div
     text-align: center
     float: none
@@ -245,7 +249,7 @@ label
     min-height: calc(100vh - 76px)
 
 body.admin
-    background: #2c2c2c
+    background: #483434
 
 .admin .page
     padding: 50px 0
