--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -42,9 +42,10 @@ h3
         width: 96px
 
 .reset-search-link
-    margin-top: 30px
+    margin-bottom: 30px
     color: #8e8e8e
     font-size: 16px
+    display: block
 
     &:hover
         color: lighten(#8e8e8e, 30%)//#505050
@@ -400,7 +401,7 @@ body.admin
     border: none 
     height: 32px
     margin: 10px 0
-    width: 286px//265px//300px
+    width: 250px
     color: black
     font-size: 16px
     font-weight: normal
