--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,5 +1,7 @@
 h3
     text-transform: none !important
+    
+
 
 .feature_header .feature_title
     display: inline !important
@@ -618,7 +620,7 @@ tr td:first-child
         color: white !important
 
 .navbar-inverse .navbar-nav > li > a
-    padding: 15px
+    padding: 15px 10px
     color: white !important
 
 .feature_header
@@ -733,3 +735,22 @@ tr td:first-child
     text-align: center
 
 
+h1, h2, h3, h4, h5, h6
+    font-weight: bold !important
+
+p
+    color: #4a4a4a !important
+
+.single-feature
+    p
+        color: silver !important
+    &:hover p
+        color: black !important
+
+
+.article-expanded img,
+.photo-expanded img,
+.resource-expanded img
+    display: block
+    max-width: 100%
+    height: auto
