--- a/resources/assets/stylus/custom.styl
+++ b/resources/assets/stylus/custom.styl
@@ -1779,7 +1779,7 @@ figcaption .links a
 
 .footer_bottom p 
     font-size: 18px
-    color: #C4C4C4
+    color: #9e9e9e !important//#C4C4C4
     margin: 25px 0px
 
 
