--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,9 @@
 h3 {
   text-transform: none !important;
 }
+strong {
+  color: #4a4a4a;
+}
 .feature_header .feature_title {
   display: inline !important;
 }
@@ -110,7 +113,7 @@ body {
   background: #fff;
 }
 .description {
-  font-size: 18px;
+  font-size: 16px;
 }
 li {
   color: #6a6a6a;
@@ -165,13 +168,23 @@ textarea {
 .hidden {
   visibility: hidden;
 }
-a:not(.price-link) {
+a:not(.price-link):not(.reset-search-link) {
   color: #fff;
   text-decoration: none;
 }
-a:not(.price-link):hover,
-a:not(.price-link):focus {
+a:not(.price-link):not(.reset-search-link):hover,
+a:not(.price-link):not(.reset-search-link):focus {
   color: #fff;
+}
+a.cke_path_item,
+span.cke_path_empty {
+  color: #000 !important;
+}
+.cke_reset_all,
+.cke_reset_all *,
+.cke_reset_all a,
+.cke_reset_all textarea {
+  color: #000 !important;
 }
 .goup-container {
   background-color: #dc4545 !important;
@@ -290,7 +303,7 @@ body.admin {
   position: relative;
   margin: 0 0 50px;
   padding: 40px;
-  background: #ececec;
+  background: #f3f3f3;
   box-shadow: 0 0px 3px 1px #000;
 }
 .chimney img,
@@ -335,7 +348,7 @@ body.admin {
 .photo-expanded,
 .article-expanded,
 .resource-expanded {
-  background: #d8d8d8;
+  background: #f3f3f3;
   box-shadow: 0 0px 3px 1px #000;
   padding: 0 40px 40px;
   margin: 0 0;
@@ -360,7 +373,7 @@ body.admin {
   margin: 70px 0;
 }
 .main-block {
-  background: #d8d8d8;
+  background: #f3f3f3;
   margin: 20px 0 50px 0;
   padding: 50px;
   box-shadow: 0 0px 5px 1px #5d5d5d;
@@ -2136,7 +2149,7 @@ right*/,
 .footer_bottom,
 .footer_bottom p {
   font-size: 18px;
-  color: #c4c4c4;
+  color: #9e9e9e !important;
   margin: 25px 0px;
 }
 #back-top {
@@ -3352,7 +3365,6 @@ tr td:first-child {
   font-weight: bold;
 }
 .item-img {
-  max-height: 240px;
   margin: 0;
   display: inline-block;
 }
@@ -3454,7 +3466,10 @@ tr td:first-child {
 }
 .pagination>li>a,
 .pagination>li>span {
-  color: #000;
+  color: #000 !important;
+}
+.pagination .active span {
+  color: #fff !important;
 }
 .pagination>.disabled>span {
   background: #d8d8d8;
@@ -3528,16 +3543,24 @@ p {
 .price-list li a.price-link:hover {
   text-decoration: underline !important;
 }
+table {
+  border: 1px solid #c0c0c0;
+}
 table tr td,
 table tr th {
-  border-right: 1px solid #808080;
+  border: 1px solid #c0c0c0;
+  color: #000;
 }
 .table-meta {
-  background: #ff9142;
+  background: #d6d6d6;
 }
 .table-data th {
-  border-right: 1px solid #808080;
-  background: #ff9142;
+  border: 1px solid #c0c0c0;
+  background: #d6d6d6;
+  color: #000;
+}
+.Contacts strong {
+  color: #c0c0c0;
 }
 
 /*# sourceMappingURL=app.css.map */
